# r5-cop

./: README.md
r5cop_common/: CMakeLists.txt  package.xml
r5cop_common/rviz/: pr2_sim_explore.rviz  pr2_sim_ork.rviz  toad_nav.rviz
r5cop_common/scripts/: pr2_head_action_cl.py  pr2_tuck_arms_cl.py
r5cop_ed/: CMakeLists.txt  package.xml
r5cop_ed/launch/: ed.launch
r5cop_ed/worlds/: ed_fit_lab_sim.yaml
r5cop_ed/worlds/fit_lab/: model.yaml
r5cop_navigation/: CMakeLists.txt  package.xml
r5cop_navigation/config/: pr2_sim_costmap_common_params.yaml  pr2_sim_global_costmap_params.yaml  pr_sim_local_costmap_params.yaml
r5cop_navigation/launch/: pr2_exploration.xml  pr2_move_base.xml  pr2_nav.launch  pr2_slam.launch  toad_nav.launch
r5cop_navigation/maps/: fit_lab_sim.pgm  fit_lab_sim.yaml
r5cop_object_recognition/: CMakeLists.txt  package.xml
r5cop_object_recognition/conf/: detection.table.ros.ork
r5cop_object_recognition/launch/: object_recognition_kitchen.launch
r5cop_sim_env/: CMakeLists.txt  README.md  package.xml
r5cop_sim_env/launch/: fit_lab.launch  pr2_sim.launch  spawn_objects.launch  toad_sim.launch
r5cop_sim_env/models/fit_lab/: model.config  model.sdf
r5cop_sim_env/models/lund_lab/: model.config  model.sdf
r5cop_sim_env/models/lund_lab/meshes/: fit_lab_map.dae
r5cop_sim_env/worlds/: fit_lab.world
r5cop_state_machines/: CMakeLists.txt  package.xml
r5cop_state_machines/src/: pr2_state_machine.py  robot_position.py  toad_state_machine.py
