<?xml version="1.0"?>
<package>
  <name>r5cop_navigation</name>
  <version>0.0.0</version>
  <description>The r5cop_navigation package</description>

  <maintainer email="imaterna@fit.vutbr.cz">Zdenek Materna</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
</package>
