<?xml version="1.0"?>
<package format="2">
  <name>r5cop_navigation</name>
  <version>0.0.0</version>
  <description>The r5cop_navigation package</description>

  <maintainer email="imaterna@fit.vutbr.cz">Zdenek Materna</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>frontier_exploration</depend>
  <depend>move_base</depend>
  
</package>
