<?xml version="1.0"?>
<package>
  <name>r5cop_object_recognition</name>
  <version>0.0.0</version>
  <description>The r5cop_object_recognition package</description>

  <maintainer email="imaterna@todo.todo">imaterna</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
