<?xml version="1.0"?>
<package>
  <name>r5cop_sim_env</name>
  <version>0.0.0</version>
  <description>The r5cop_sim_env package</description>

  <maintainer email="imaterna@fit.vutbr.cz">Zdenek Materna</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>urdf</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>urdf</run_depend>

</package>
