<?xml version="1.0"?>
<package>
  <name>r5cop_state_machines</name>
  <version>0.0.0</version>
  <description>The r5cop_state_machines package</description>

  <maintainer email="imaterna@fit.vutbr.cz">Zdenek Materna</maintainer>

  <license>LGPL</license>

  <url type="repository">https://github.com/robofit/r5-cop</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
